# jinyoung-manipulator-detection-and-grasping

./: README.md  Untitled Document  task_data.txt
camera_node/: CMakeLists.txt  package.xml
camera_node/include/: camera_node.hpp
camera_node/src/: camera_node.cpp
default_mr5/: .setup_assistant  CMakeLists.txt
default_mr5/config/: fake_controllers.yaml  kinematics.yaml
default_mr5/launch/: move_group.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
jinyoung_description/default_mr5/: package.xml
jinyoung_description/default_mr5/config/: mr5_v2.srdf  ompl_planning.yaml
jinyoung_description/default_mr5/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  setup_assistant.launch  warehouse.launch
jinyoung_description/mr5_srdf/: .setup_assistant  package.xml
jinyoung_description/mr5_srdf/config/: joint_limits.yaml  mr5_v2.srdf
jinyoung_description/mr5_srdf/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  setup_assistant.launch  warehouse.launch
jinyoung_description/mr5_v2/urdf/: mr5_v2.gv  mr5_v2.urdf
jinyoung_description/mr5_v2/urdf/launch/: mr5_v2.launch
jinyoung_description/mr5_v2/urdf/meshes/: 20to14.dae  20to14.stl  25to20.dae  link_elbow.stl  mprm2590.stl  mr14tocamera.stl
jinyoung_description/mr5_v5/: CMakeLists.txt  package.xml
jinyoung_description/mr5_v5/launch/: mr5_v5.launch
jinyoung_description/mr5_v5/srdf/: package.xml
jinyoung_description/mr5_v5/srdf/launch/: ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  setup_assistant.launch
jinyoung_description/mr5_v5/urdf/: mr5_v5.gv  mr5_v5.urdf
jinyoung_description/mr5_v5/urdf/meshes/: 25BASEPAN.stl  25to20.stl  CameraMount.stl  base.dae
jinyoung_description/mr5_v5/urdf/xacro/: common.xacro  mr5_gripper.urdf.xacro  mr5_gripper_v2.urdf.xacro
jinyoung_description/srdf/config/: fake_controllers.yaml  mr5_v5.srdf  ompl_planning.yaml
jinyoung_description/srdf/launch/: demo.launch  moveit.rviz  moveit_rviz.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
jinyoung_gazebo/: CMakeLists.txt  package.xml
jinyoung_gazebo/launch/: manipulator_empty_world.launch
jinyoung_gazebo/models/: empty.world
jinyoung_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jinyoung_moveit_config/config/: fake_controllers.yaml  mr5.srdf  ompl_planning.yaml  ros_controllers.yaml
jinyoung_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mr5_srdf/: CMakeLists.txt
mr5_srdf/launch/: default_warehouse_db.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
mr5_v2/: CMakeLists.txt  package.xml
mr5_v2/urdf/meshes/: Intel_RealSense_Depth_Camera_D415.stl  intel_realsense_depth_camera.stl
mr5_v5/srdf/: .setup_assistant
mr5_v5/srdf/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch
mr5_v5/urdf/meshes/: mr14tocamera.stl  parallel_assy_asm.stl
qtros/: CMakeLists.txt  package.xml
qtros/include/qtros/: main_window.hpp  main_window.hpp.autosave  qnode.hpp
qtros/src/: main.cpp  main_window.cpp  main_window.cpp.autosave  qnode.cpp
qtros/ui/: main_window.ui  main_window.ui.autosave
srdf/: CMakeLists.txt
srdf/config/: joint_limits.yaml
srdf/launch/: default_warehouse_db.launch  demo.launch  moveit.rviz
